--- a/src/app/componentes/login-registro/login-registro.component.html
+++ b/src/app/componentes/login-registro/login-registro.component.html
@@ -2,9 +2,6 @@
 
     <h2>Login y registro</h2>
 
-    <div class="pendiente">El guardián debería tener su propio apartado con un subapartado del fichero de rutas</div>
-    <div class="pendiente mb-40">La implementación del servicio debería tener su propio apartado</div>
-  
     <app-indice [items]="itemsIndice"></app-indice>
     
     <!-- ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── -->
@@ -20,34 +17,35 @@
       <li>El problema es que esta guía no se centra en aplicaciones de backend, sino en Angular, de modo que no vamos a detenernos en la gestión de peticiones HTTP desde el backend</li>
       <li>En su lugar, ilustraremos el funcionamiento de Firebase para este propósito, que no solo nos permitirá almacenar y proteger los datos de los usuarios, sino que nos proveerá de una API para su gestión</li>
     </ul>
-  
-    <!-- ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── -->
-  
-    <h3 id="puesta-en-marcha">2. Puesta en marcha</h3>
-    <hr>
 
-    <h4>2.1 Modelo de usuario</h4>
+    <h4>1.1 Pasos necesarios</h4>
+    
+    <ul>
+        <li>Configurar Firebase para que habilite el inicio de sesión mediante email y contraseña</li>
+        <li>Cuando el usuario inicie sesión en nuestra aplicación, Firebase nos enviará por HTTP un token de seguridad que gestionaremos durante toda la sesión</li>
+        <li>Este token de seguridad se creará cuando el usuario inicie sesión y se destruirá cuando la cierre o cuando expire (normalmente pasada una hora)</li>
+        <li>Sabremos si el usuario ha iniciado sesión si dicho token de seguridad todavía existe</li>
+        <li>Crear una clase a modo de modelo que defina la estructura de datos necesaria para definir un usuario</li>
+        <li>Crear un servicio para la gestión de usuarios y un guardián para la gestión del token de seguridad y protección de rutas</li>
+        <li>Un guardián no es más que un tipo de servicio específico para proteger rutas de nuestro proyecto de accesos indeseados</li>
+        <li>Crear tres componentes, uno para el login, otro para el registro y otro para la página a la que accederemos tras loguearnos correctamente</li>
+        <li>Esta última estará eventualmente protegida para que solo sea accesible tras loguearnos correctamente</li>
+    </ul>
+
+    <h4>1.2 Modelo de usuario</h4>
     
     <ul>
         <li>Creamos un directorio llamado <i>models</i> o <i>modelos</i></li>
         <li>Dentro, creamos un fichero llamado <i>usuario.model.ts</i> desde el editor de código, no hace falta utilizar Angular CLI</li>
-        <li>Dentro, creamos una clase de la forma ilustrada en la figura 2.1</li>
+        <li>Dentro, creamos una clase de la forma ilustrada en la figura 1.1</li>
         <li>Nótese que los campos de esta clase son los que se van a solicitar en los formularios de login y registro</li>
         <li>Normalmente se solicitan más datos en el registro, pero nosotros hemos querido simplificarlo lo máximo posible y por ello solo vamos a trabajar con el email y la contraseña</li>
 
         <img src="assets/img/login-y-registro/figura2-1.png" alt="">
-        <caption><strong>Figura 2.1.</strong> Modelo de usuario</caption>
+        <caption><strong>Figura 1.1.</strong> Modelo de usuario</caption>
     </ul>
 
-    <h4>2.2 Ficheros necesarios</h4>
-    
-    <ul>
-        <li>Creamos tres nuevos componentes, uno para el login, otro para el registro y otro para la página a la que accederemos tras loguearnos correctamente</li>
-        <li>Esta última estará eventualmente protegida para que solo sea accesible tras loguearnos correctamente</li>
-        <li>Creamos un servicio para la gestión de usuarios y un guardián para la gestión del token de seguridad y protección de rutas</li>
-    </ul>
-
-    <h4>2.3 Firebase</h4>
+    <h4>1.3 Firebase</h4>
 
     <div class="consultar mb-40"><a href="https://firebase.google.com/" target="_blank">Página web oficial</a> de Firebase</div>
 
@@ -62,8 +60,11 @@
         <li>Esto libera al programador de tener que implementar esta lógica desde el lado del servidor</li>
         <li>Si en un futuro quisieras gestionar esta parte de otra manera, la aplicación de Angular no varía al estar encapsulada (en todo caso, las URLs de las peticiones HTTP)</li>
     </ul>
-
-    <h4>2.4 Servicio</h4>
+  
+    <!-- ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── -->
+  
+    <h3 id="puesta-en-marcha">2. Servicio</h3>
+    <hr>
 
     <div class="pendiente">Explicar por qué se cargar en una variable el token de seguridad del local storage y que pasa cuando este no existe todavía (creo que se devuelve <b>undefined</b> o algo así)</div>
     <div class="pendiente mb-40">En la figura 2.2 no se recibe una variable de tipo modelo de usuario como único parámetro. ¿Está bien?</div>
